2014-09-18  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.6 release procedure:
 	Changes since nco-4_4_5: ncks -V, ncap2 -s -S, DAP cnf
	cd ~/nco;cvs tag -d nco-4_4_6;cvs tag -d nco-4_4_6-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.6 release"
	cvs tag -c nco-4_4_6;cvs tag -c nco-4_4_6-1

	* Note locations which assume record dimension is in first position

2014-09-17  Charlie Zender  <zender@uci.edu>

	* Start to generalize ncra.c so single record dimensions can occupy any position

2014-09-16  Charlie Zender  <zender@uci.edu>

	* Add regression test to demonstrate bug with ncra --dbl on
	variables with both scale_factor and missing values. Bug bites
	only when entire file is processed. Probably not normalizing at end.

	* Implement missing getopt() line for file_format switch

2014-09-15  Charlie Zender  <zender@uci.edu>

	* ./configure now checks for daperror() instead of nc__opendap()

	* Add NC_EIO error clarifications

2014-09-11  Charlie Zender  <zender@uci.edu>

	* Create -V = --var_val = -Q --no_nm_prn for ncks to print only	variable values

	* Document -Q and -V and switch --quiet to -Q (not -q) and synonomize -q with --quench

2014-09-02  Charlie Zender  <zender@uci.edu>

	* Clarify WARNING when record dimension size changes

2014-09-02  Henry Butowsky  <henryb@hush.com>

	* ncap2 command-line and script arguments can now both be specified AND executed
	Command-line args are executed before script:
	ncap2 -v -s "lon=longitude" -S in_4.nc out.nc

2014-08-26  Charlie Zender  <zender@uci.edu>

	* NCO 4.4.5 release procedure:
 	Changes since nco-4_4_4: https DAP, gxvx, mk, ncl_var, dmn_cmn,	ncpdq, C:
	cd ~/nco;cvs tag -d nco-4_4_5;cvs tag -d nco-4_4_5-1
	cd ~/nco;cvs commit -m "Preparing nco-4.4.5 release"
	cvs tag -c nco-4_4_5;cvs tag -c nco-4_4_5-1

2014-08-25  Charlie Zender  <zender@uci.edu>

	* Specify correct dmn_cmn[] information to nco_cnk_sz_set_trv()

2014-08-22  Charlie Zender  <zender@uci.edu>
